tests/e2e/inline_service_output3b.error
Error: syntax error in story at line 1, column 24

1|    a = (listen command to client) + 0
                             ^

E0041: `c` is not allowed here
