tests/e2e/inline_service_output3b.story
a = (listen command to client) + 0
